add many to many with a new entity (steam_user, games, games_stat)